<resources>
    <string name="app_name">SocialNetwork</string>
    <string name="action_settings">Settings</string>
    <string name="edt_email_hint">enter your email</string>
    <string name="hint_password">enter your password</string>
    <string name="btn_register">Register</string>
    <string name="btn_forget">Forget your password?</string>
    <string name="btn_already_registered">Already registered.Login ME!</string>
    <string name="edyttext_name">enter you name</string>
    <string name="reset_password">Reset Password</string>
    <string name="back"><![CDATA[<<< Back]]></string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_forget_password">ForgetPassword</string>
    <string name="btn_login">Login</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_my_profile">MyProfile</string>
    <string name="sign_out">Sign out</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="change_password">Change password</string>
    <string name="pp_content_discription">your profile pic</string>
    <string name="send_msg_hint">Type a msg</string>
    <string name="my_profile">My Profile</string>
    <string name="first_name_hint">First name</string>
    <string name="last_name_hint">last name</string>
    <string name="don_t_have_an_account_register_now">Don\'t have an account? Register Now!</string>
    <string-array name="light_color">
        <item>None</item>
        <item>White</item>
        <item>Red</item>
        <item>Blue</item>
        <item>Green</item>
    </string-array>
    <string-array name="light_color_entries">
        <item>0x00000000</item>
        <item>0xffffffff</item>
        <item>0xffff0000</item>
        <item>0xff0000ff</item>
        <item>0xff00ff00</item>

    </string-array>
</resources>
