<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_forget_password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="150dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sign_in.asu.socialnetwork.Activity.ForgetPassword"
    tools:showIn="@layout/activity_forget_password"

    >

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp">

        <EditText
            android:id="@+id/email_restore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/edt_email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@android:color/black" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/restore_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/colorAccent"
        android:text="@string/reset_password"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/back_to_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/back"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />
</LinearLayout>

