<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="15dp"
    android:paddingRight="15dp">

    <LinearLayout
        android:id="@+id/content_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.sign_in.asu.socialnetwork.Fragment.SignUpFragment"
        tools:showIn="@layout/content_signup">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/logo" />

        <LinearLayout
            android:id="@+id/containLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp">

                <EditText
                    android:id="@+id/email_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edt_email_hint"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:textColor="@android:color/black" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp">

                <EditText
                    android:id="@+id/password_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true"
                    android:hint="@string/hint_password"
                    android:imeActionId="@+id/login"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@android:color/black" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/colorAccent"
                android:text="@string/btn_login"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/btn_forget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/btn_forget"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_register_activty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/don_t_have_an_account_register_now"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/black"
                android:textStyle="bold" />


        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBarLogin"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />
    </LinearLayout>

</ScrollView>
