<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_my_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.sign_in.asu.socialnetwork.Fragment.MyProfileFragment"
    tools:showIn="@layout/activity_my_profile">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="55dp"

        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/pp2"
            android:layout_width="141dp"
            android:layout_height="144dp"
            android:contentDescription="@string/pp_content_discription"
            android:src="@drawable/profilepic" />

        <ImageButton
            android:id="@+id/uploadImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:background="@android:color/transparent"
            android:src="@drawable/upload" />

    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="#fff"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:id="@+id/useremail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            tools:text="ahmed alaa" />

        <ImageButton
            android:id="@+id/edtemail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/edit" />
    </LinearLayout>

    <Button
        android:id="@+id/changePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:text="@string/change_password"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/Signout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:text="@string/sign_out"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@android:color/black" />

</LinearLayout>
